--- a/haml/index.haml
+++ b/haml/index.haml
@@ -8,12 +8,13 @@
     %link{ href: "css/custom.min.css", rel: "stylesheet" }
     %script{ src: 'lib/ionic/js/ionic.bundle.js' }
     %script{ src: 'cordova.js' }
+    %script{ src: 'cordova_plugins.js' }
     %script{ src: 'js/controllers/tipadvisor.controllers.js' }
     %script{ src: 'js/services/tipadvisor.services.js' }
-    %script{ src: 'js/tipadvisor.app.js' }
+    %script{ src: 'js/tipadvisor.js' }
     / <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     / <link href='http://fonts.googleapis.com/css?family=Kalam:400,700' rel='stylesheet' type='text/css'>
-  %body{ "ng-app" => "tipAdvisor" }
+  %body.platform-ios{ "ng-app" => "tipAdvisor" }
     %ion-header-bar.bar-stable
       %h1.title TipAdvisor
     %ion-nav-view{ "animation" => "slide-left-right-ios7"}
