--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -13,7 +13,7 @@ $max-height: 100%;
 }
 
 html {
-  height: $max-height;
+
 }
 body {
   background: $niagara-green;
@@ -96,7 +96,6 @@ body {
   background: $niagara-green;
   width:100%;
   .row-btns {
-    color: white !important;
     padding-left:0px;
     text-align: center;
     &:last-child{
@@ -110,6 +109,7 @@ body {
       background: rgba(255,255,255,0);
       border: 2px solid white;
       border-radius: 50%;
+      color: white;
       display: inline-block;
       height: 70px;
       margin:0 10px 2px 0;
