set tip to default of 15%

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -106,6 +106,10 @@ body {
         background: white;
         color: $niagara-green;
       }
+      &:active {
+        background: $niagara-green;
+        color: white;
+      }
       background: rgba(255,255,255,0);
       border: 2px solid white;
       border-radius: 50%;
