--- a/www/templates/tipCalc.html
+++ b/www/templates/tipCalc.html
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class='tip-slider-container'>
-        <input class='tip-slider' max='35' min='0' ng-change='calcTotals()' ng-model='tip' step='1' type='range' value='15'>
+        <input class='tip-slider' max='30' min='0' ng-change='calcTotals()' ng-model='tip' step='1' type='range'>
       </div>
       <div class='total-container'>
         <div class='header'>Total</div>
