--- a/haml/templates/tipCalc.haml
+++ b/haml/templates/tipCalc.haml
@@ -12,7 +12,7 @@
         .cur-tip
           {{ tipInCur | currency }}
       .tip-slider-container
-        %input.tip-slider{ type: "range", min: "0", max: "35", step: "1", value: "15", "ng-model" => "tip", "ng-change" => "calcTotals()" }
+        %input.tip-slider{ type: "range", min: "0", max: "30", step: "1", "ng-model" => "tip", "ng-change" => "calcTotals()" }
       .total-container
         .header Total
         .cur-total
