--- a/haml/templates/tipCalc.haml
+++ b/haml/templates/tipCalc.haml
@@ -7,10 +7,9 @@
           {{ bill.dollars + "." + bill.cents | currency }}
       .tip-container
         .header Tip
-        .cur-tip-per
-          {{ tip + "%" }}
         .cur-tip
-          {{ tipInCur | currency }}
+          ({{ tip + "%" }}) {{ tipInCur | currency }}
+          
       .tip-slider-container
         %input.tip-slider{ type: "range", min: "0", max: "30", step: "1", "ng-model" => "tip", "ng-change" => "calcTotals()" }
       .total-container
