--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -116,7 +116,7 @@ body {
   }
 }
 .num-btns-container {
-  margin-top:10px;
+  margin-top:2px;
   width:100%;
   .row-btns {
     &:after {
@@ -126,8 +126,6 @@ body {
     }
     padding-left:0px;
     text-align: center;
-    &:last-child{
-    }
     .num-btn {
       &:active {
         background: $sunset-orange;
@@ -140,16 +138,18 @@ body {
       //   color: $ebony-clay;
       // }
       background: rgba(255,255,255,1);
-      border: 0px solid black;
-      border-radius: 50%;
+      border: 2px solid darken($curious-blue, 10%);
+      border-right-width:1px;
+      border-left-width:1px;
       color: $ebony-clay;
       cursor: pointer;
       display: inline-block;
-      height: 80px;
-      margin:0px 0px 2px 0;
+      font-size: 1.4em;
+      height: 87px;
+      margin:0px 0px 0px 0;
       outline: none;
       text-align: center;
-      width: 80px;
+      width: 102px;
       -webkit-tap-highlight-color: white;
     }
   }
@@ -159,8 +159,8 @@ body {
   .num-btns-container {
     .row-btns {
       .num-btn {
-        height:60px;
-        width:60px;
+        height:65px;
+        width:102px;
       }
     }
   }
