--- a/haml/index.haml
+++ b/haml/index.haml
@@ -15,6 +15,8 @@
     / <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     / <link href='http://fonts.googleapis.com/css?family=Kalam:400,700' rel='stylesheet' type='text/css'>
   %body.platform-ios{ "ng-app" => "tipAdvisor" }
-    %ion-header-bar.bar-stable
+    %ion-header-bar.header-bar.bar-stable
+      %button.button.button-icon.icon.ion-ios7-world-outline
       %h1.title TipAdvisor
+      %button.button.button-icon.icon.ion-ios7-gear-outline
     %ion-nav-view{ "animation" => "slide-left-right-ios7" }
