--- a/haml/index.haml
+++ b/haml/index.haml
@@ -16,7 +16,7 @@
     / <link href='http://fonts.googleapis.com/css?family=Kalam:400,700' rel='stylesheet' type='text/css'>
   %body.platform-ios{ "ng-app" => "tipAdvisor" }
     %ion-header-bar.header-bar.bar-stable
-      %button.button.button-icon.icon.ion-ios7-world-outline
-      %h1.title TipAdvisor
-      %button.button.button-icon.icon.ion-ios7-gear-outline
-    %ion-nav-view{ "animation" => "slide-left-right-ios7" }
+      %button.button.button-icon.icon.ion-ios7-world-outline{ "ui-sref" => "guide" }
+      %h1.title{ "ui-sref" => "calc" } TipAdvisor
+      %button.button.button-icon.icon.ion-ios7-gear-outline{ "ui-sref" => "settings"}
+    %ion-nav-view{ "animation" => "fade-in" }
