--- a/haml/templates/tipGuide.haml
+++ b/haml/templates/tipGuide.haml
@@ -3,6 +3,5 @@
     .list.guide-list
       .item.item-avatar-left{ "ng-repeat" => "country in guide" }
         %img{ src: "./img/{{ country.code }}.png"}
-        %h2 {{ country.name }}
-        %h3 {{ country.avgTip }}
+        %h2 {{ country.name }}: {{ country.avgTip }}
         %p {{ country.notes }}
