--- a/www/templates/tipGuide.html
+++ b/www/templates/tipGuide.html
@@ -1,7 +1,7 @@
 <ion-view title='TipGuide'>
   <ion-content ng-controller='tipGuideCtrl'>
     <div class='list guide-list'>
-      <div class='item item-avatar-left' ng-repeat='country in guide'>
+      <div class='item item-avatar-left' ng-repeat="country in guide | orderBy : 'name' : reverse">
         <img src='./img/{{ country.code }}.png'>
         <h2>
           {{ country.name }}:
