fixed widths for calc buttons:

--- a/www/templates/tipCalc.html
+++ b/www/templates/tipCalc.html
@@ -1,5 +1,5 @@
 <ion-view title='TipCalc'>
-  <ion-content ng-controller='tipCalcCtrl'>
+  <ion-content ng-controller='tipCalcCtrl' scroll='false'>
     <div class='calc-container'>
       <div class='bill-container'>
         <div class='header'>Bill</div>
