--- a/haml/templates/tipCalc.haml
+++ b/haml/templates/tipCalc.haml
@@ -1,5 +1,5 @@
 %ion-view{ title: "TipCalc"}
-  %ion-content{ "ng-controller" => "tipCalcCtrl" }
+  %ion-content{ "ng-controller" => "tipCalcCtrl", "scroll" => "false" }
     .calc-container
       .bill-container
         .header Bill
