--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -5,6 +5,7 @@ $ebony-clay: rgba(34, 49, 63, 1);
 $jaffa-orange: rgba(235, 151, 78, 1);
 $sunset-orange: rgba(246, 71, 71, 1);
 
+$top-bar-bg: rgba(248, 248, 248, 1);
 $top-bar-border: rgba(248, 248, 248, 1);
 
 $max-width: 100%;
@@ -60,6 +61,7 @@ body {
     clear: both;
   }
   background: $curious-blue;
+  // border-top: 2px solid darken($curious-blue, 20%);
   font-size: 1.5em;
   padding: 20px 10px 10px 10px;
   .header{
@@ -101,62 +103,10 @@ body {
     width: 100%;
   }
 }
-.num-btns-container {
-  margin-top:1px;
-  width:100%;
-  .row-btns {
-    &:after {
-      content: "";
-      display: table;
-      clear: both;
-    }
-    &:last-child {
-      .num-btn {
-        border-bottom-width:3px;
-      }
-    }
-    padding-left:0px;
-    text-align: center;
-    .num-btn {
-      &:first-child {
-        border-right-width:0px;
-        border-left-width:3px;
-      }
-      &:last-child {
-        border-right-width:3px;
-      }
-      &:active {
-        background: $sunset-orange;
-        border: 1px solid transparent;
-        border-bottom-width:4px;
-        color: white;
-        -webkit-transform: scale(1.1);
-        transform: scale(1.1);
-        -webkit-transition: 0.2s ease-in;
-        transition: 0.2s ease-in;
-      }
-      background: rgba(255,255,255,1);
-      border: 1px solid $niagara-green;
-      // border: 1px solid darken($curious-blue, 20%);
-      border-bottom-width:4px;
-      color: $ebony-clay;
-      cursor: pointer;
-      display: inline-block;
-      font-size: 1.4em;
-      // height: 87px;
-      height: 72px;
-      margin:0px 0px 0px 0px;
-      outline: none;
-      text-align: center;
-      width: 103px;
-      -webkit-tap-highlight-color: white;
-    }
-  }
-}
 
 .total-container{
   background: $niagara-green;
-  // border-bottom: 2px solid darken($niagara-green, 20%);
+  border-bottom: 2px solid darken($niagara-green, 20%);
   font-size: 1.5em;
   padding: 20px 10px 20px 10px;
   .header{
@@ -168,6 +118,68 @@ body {
     font-weight: bold;
   }
 }
+
+.num-btns-container {
+  width:100%;
+  .row-btns {
+
+    &:after {
+      content: "";
+      display: table;
+      clear: both;
+    }
+    &:first-child {
+      .num-btn {
+        border-top-width:0px;
+      }
+    }
+    &:last-child {
+      .num-btn {
+        border-bottom-width:0px;
+      }
+    }
+    .num-btn {
+      &:first-child {
+        border-right-width:1px;
+        border-left-width:0px;
+      }
+      &:last-child {
+        border-right-width:0px;
+        border-left-width:1px;
+        width: 106px;
+      }
+      &:active {
+        background: $sunset-orange;
+        // border: 1px solid transparent;
+        // border-bottom-width:4px;
+        color: white;
+        // -webkit-transform: scale(1.1);
+        // transform: scale(1.1);
+        -webkit-transition: 0.2s ease-in;
+        transition: 0.2s ease-in;
+      }
+      background: white;
+      border: none;
+      border: 1px solid darken($niagara-green, 20%);
+      // border: 1px solid darken($curious-blue, 20%);
+      border-bottom-width:1px;
+      color: $ebony-clay;
+      cursor: pointer;
+      display: inline-block;
+      float: left;
+      font-size: 1.4em;
+      // height: 87px;
+      height: 73px;
+      margin:0px;
+      outline: none;
+      text-align: center;
+      width: 107px;
+      -webkit-tap-highlight-color: white;
+    }
+  }
+}
+
+
 .guide-list {
   .item-avatar-left {
     padding-left: 16px;
@@ -198,8 +210,11 @@ body {
   .num-btns-container {
     .row-btns {
       .num-btn {
-        height:50px;
-        width:102px;
+        &:last-child {
+          width: 106px;
+        }
+        height:51px;
+        width:107px;
       }
     }
   }
@@ -211,11 +226,10 @@ body {
   }
 }
 .pane {
-  background: $niagara-green;
-  // background: darken($curious-blue, 20%);
+  background: white;
 }
 .bar {
-  border-bottom: none;
+  border-bottom: 0px solid transparent;
 }
 .bar.bar-stable {
   border-color: transparent;
