--- a/www/templates/tipCalc.html
+++ b/www/templates/tipCalc.html
@@ -22,7 +22,7 @@
           {{ billWithTip | currency }}
         </div>
       </div>
-      <div calc=''></div>
+      <div calc='' class='hidden-calc'></div>
     </div>
   </ion-content>
 </ion-view>
