toggle switch for tax

--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -1,3 +1,16 @@
 <ion-view title='TipAdvisorSettings'>
-  <ion-content ng-controller='settingsCtrl'></ion-content>
+  <ion-content ng-controller='settingsCtrl'>
+    <div class='card-niagara'>
+      <div class='item item-toggle item-text-wrap'>
+        Subtract Tax
+        <label class='toggle toggle-niagara'>
+          <input type='checkbox'>
+          <div class='track'>
+            <div class='handle'></div>
+          </div>
+        </label>
+        <!-- %p If you subtract tax, your tip will be calculated with the pre-tax amount of your bill. This can save you hundreds of dollars! -->
+      </div>
+    </div>
+  </ion-content>
 </ion-view>
