--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -148,11 +148,11 @@ body {
       }
       &:active {
         background: $sunset-orange;
-        border: 1px solid transparent;
+        // border: 1px solid transparent;
         // border-bottom-width:4px;
         color: white;
-        -webkit-transform: scale(1.1);
-        transform: scale(1.1);
+        // -webkit-transform: scale(1.1);
+        // transform: scale(1.1);
         -webkit-transition: 0.2s ease-in;
         transition: 0.2s ease-in;
       }
@@ -216,6 +216,43 @@ body {
     text-overflow: none;
     white-space: normal;
   } 
+}
+.settings-menu-list {
+  p {
+    margin-top:5px;
+    overflow: visible;
+    text-overflow: none;
+    white-space: normal;
+  }
+}
+.toggle.toggle-niagara input:checked + .track {
+  border-color: $sunset-orange;
+  background-color: $sunset-orange; 
+}
+.card-full {
+  box-shadow: none;
+  margin: 0px;
+}
+.card-niagara {
+  .item {
+    &:last-child {
+      border-bottom-right-radius: 0px;
+      border-bottom-left-radius: 0px;
+    }
+    background: $niagara-green;
+    border-width:2px;
+    border-top-width: 0px;
+    border-right-width: 0px;
+    border-left-width: 0px;
+    border-radius: 0px;
+    border-color: darken($niagara-green, 20%);
+    color: white;
+    font-size: 1.5em;
+    padding: 20px 10px 20px 10px;
+    .toggle {
+      margin: 1px;
+    }
+  }
 }
 
 @media (max-height: 480px) {
