--- a/haml/templates/tipGuide.haml
+++ b/haml/templates/tipGuide.haml
@@ -1,8 +1,9 @@
 %ion-view{ title: "TipGuide"}
   %ion-content{ "ng-controller" => "tipGuideCtrl" }
-    .list.guide-list
+    .fixed-list
       %label.item.item-input
         %input{ type: "text", "ng-model" => "search.$", placeholder: "Search" }
+    .list.guide-list
       .item.item-avatar-left{ "ng-repeat" => "country in guide | filter : search | orderBy : 'name' : reverse" }
         %img{ src: "./img/{{ country.code }}.png"}
         %h2 
