--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -42,8 +42,8 @@ body {
 .bill-container{
   background: $niagara-green;
   border-bottom: 2px solid darken($niagara-green, 20%);
-  font-size: 1.5em;
-  padding: 20px 10px 20px 10px;
+  font-size: 1.6em;
+  padding: 30px 15px 30px 15px;
   .header{
     display: inline-block;
   }
@@ -61,8 +61,8 @@ body {
     clear: both;
   }
   background: $curious-blue;
-  font-size: 1.5em;
-  padding: 20px 10px 10px 10px;
+  font-size: 1.6em;
+  padding: 30px 15px 10px 15px;
   .header{
     display: inline-block;
     float: left;
@@ -79,7 +79,7 @@ body {
 .tip-slider-container {
   background: $curious-blue;
   border-bottom: 2px solid darken($curious-blue, 20%);
-  padding: 0 10px 20px 10px;
+  padding: 0 15px 30px 15px;
   .tip-slider {
     &::-webkit-slider-thumb {
       -webkit-appearance: none;
@@ -106,8 +106,8 @@ body {
 .total-container{
   background: $niagara-green;
   border-bottom: 2px solid darken($niagara-green, 20%);
-  font-size: 1.5em;
-  padding: 20px 10px 20px 10px;
+  font-size: 1.6em;
+  padding: 30px 15px 30px 15px;
   .header{
     display: inline-block;
   }
@@ -134,6 +134,7 @@ body {
     &:last-child {
       .num-btn {
         border-bottom-width:0px;
+        height: 74px;
       }
     }
     .num-btn {
@@ -191,8 +192,15 @@ body {
   opacity: 1;
 }
 
+.fixed-list {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+}
 
 .guide-list {
+  padding-top:45px;
   .item-avatar-left {
     padding-left: 16px;
   }
@@ -247,7 +255,7 @@ body {
     border-radius: 0px;
     border-color: darken($niagara-green, 20%);
     color: white;
-    font-size: 1.5em;
+    font-size: 1.6em;
     padding: 20px 10px 20px 10px;
     .toggle {
       margin: 1px;
@@ -258,6 +266,11 @@ body {
 @media (max-height: 480px) {
   .num-btns-container {
     .row-btns {
+      &:last-child {
+        .num-btn {
+          height: 52px;
+        }
+      }
       .num-btn {
         &:last-child {
           width: 106px;
