--- a/www/templates/tipGuide.html
+++ b/www/templates/tipGuide.html
@@ -1,9 +1,11 @@
 <ion-view title='TipGuide'>
   <ion-content ng-controller='tipGuideCtrl'>
-    <div class='list guide-list'>
+    <div class='fixed-list'>
       <label class='item item-input'>
         <input ng-model='search.$' placeholder='Search' type='text'>
       </label>
+    </div>
+    <div class='list guide-list'>
       <div class='item item-avatar-left' ng-repeat="country in guide | filter : search | orderBy : 'name' : reverse">
         <img src='./img/{{ country.code }}.png'>
         <h2>
