back to header bar; toggle switch for tax

--- a/haml/index.haml
+++ b/haml/index.haml
@@ -16,8 +16,8 @@
     / <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     / <link href='http://fonts.googleapis.com/css?family=Kalam:400,700' rel='stylesheet' type='text/css'>
   %body.platform-ios{ "ng-app" => "tipAdvisor" }
-    / %ion-header-bar.header-bar.bar-stable
-    /   %button.button.button-icon.icon.ion-ios7-world-outline{ "ui-sref" => "guide" }
-    /   %h1.title{ "ui-sref" => "calc" } TipAdvisor
-    /   %button.button.button-icon.icon.ion-ios7-gear-outline{ "ui-sref" => "settings"}
+    %ion-header-bar.header-bar.bar-stable
+      %button.button.button-icon.icon.ion-ios7-world-outline{ "ui-sref" => "guide" }
+      %h1.title{ "ui-sref" => "calc" } TipAdvisor
+      %button.button.button-icon.icon.ion-ios7-gear-outline{ "ui-sref" => "settings"}
     %ion-nav-view{ "animation" => "fade-in-out" }
