--- a/haml/templates/settings.haml
+++ b/haml/templates/settings.haml
@@ -1,10 +1,10 @@
 %ion-view{ title: "TipAdvisorSettings"}
   %ion-content{ "ng-controller" => "settingsCtrl" }
-    .card-niagara
+    .card-curious-blue
       .item.item-toggle.item-text-wrap
-        Subtract Tax
+        Subtract Sales Tax
         %label.toggle.toggle-niagara
           %input{ type: "checkbox" }
           .track
             .handle
-        / %p If you subtract tax, your tip will be calculated with the pre-tax amount of your bill. This can save you hundreds of dollars!
+
