animate ion-views with sliding

--- a/haml/templates/tipCalc.haml
+++ b/haml/templates/tipCalc.haml
@@ -1,4 +1,4 @@
-%ion-view{ title: "TipCalc" }
+%ion-view{ title: "TipCalc", "animation" => "fade-in" }
   %ion-content{ "ng-controller" => "tipCalcCtrl", "scroll" => "false" }
     .calc-container
       .bill-container
