--- a/haml/templates/tipGuide.haml
+++ b/haml/templates/tipGuide.haml
@@ -1,4 +1,4 @@
-%ion-view{ title: "TipGuide"}
+%ion-view{ title: "TipGuide", "animation" => "slide-right" }
   %ion-content{ "ng-controller" => "tipGuideCtrl" }
     .list.guide-list
       %label.item.item-input
