--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -1,4 +1,4 @@
-<ion-view title='TipAdvisorSettings'>
+<ion-view animation='slide-right' title='TipAdvisorSettings'>
   <ion-content ng-controller='settingsCtrl'>
     <div class='card-curious-blue'>
       <div class='item item-toggle item-text-wrap'>
