--- a/www/templates/tipCalc.html
+++ b/www/templates/tipCalc.html
@@ -1,4 +1,4 @@
-<ion-view title='TipCalc'>
+<ion-view animation='fade-in' title='TipCalc'>
   <ion-content ng-controller='tipCalcCtrl' scroll='false'>
     <div class='calc-container'>
       <div class='bill-container'>
