--- a/haml/index.haml
+++ b/haml/index.haml
@@ -20,4 +20,4 @@
       %button.button.button-icon.icon.ion-ios7-world-outline{ "ui-sref" => "guide" }
       %h1.title{ "ui-sref" => "calc" } TipAdvisor
       %button.button.button-icon.icon.ion-ios7-gear-outline{ "ui-sref" => "settings"}
-    %ion-nav-view{ "animation" => "fade-in-out" }
+    %ion-nav-view{}
