--- a/haml/templates/settings.haml
+++ b/haml/templates/settings.haml
@@ -1,4 +1,4 @@
-%ion-view{ title: "TipAdvisorSettings"}
+%ion-view{ title: "TipAdvisorSettings", "animation" => "slide-left" }
   %ion-content{ "ng-controller" => "settingsCtrl" }
     .card-curious-blue
       .item.item-toggle.item-text-wrap
