--- a/www/templates/tipCalc.html
+++ b/www/templates/tipCalc.html
@@ -1,4 +1,4 @@
-<ion-view animation='fade-in' title='TipCalc'>
+<ion-view title='TipCalc'>
   <ion-content ng-controller='tipCalcCtrl' scroll='false'>
     <div class='calc-container'>
       <div class='bill-container'>
@@ -14,7 +14,7 @@
         </div>
       </div>
       <div class='tip-slider-container'>
-        <input class='tip-slider' max='30' min='0' ng-change='calcTotals()' ng-model='tip' step='1' type='range'>
+        <input class='tip-slider super-scaled-range' max='30' min='0' ng-change='calcTotals()' ng-model='tip' step='1' type='range'>
       </div>
       <div class='total-container'>
         <div class='header'>Total</div>
