--- a/www/templates/tipGuide.html
+++ b/www/templates/tipGuide.html
@@ -1,4 +1,4 @@
-<ion-view animation='slide-right' title='TipGuide'>
+<ion-view title='TipGuide'>
   <ion-content ng-controller='tipGuideCtrl'>
     <div class='list guide-list'>
       <label class='item item-input'>
