--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -1,15 +1,19 @@
 <ion-view title='TipAdvisorSettings'>
-  <ion-content ng-controller='settingsCtrl'>
+  <ion-content id='calc-showable' ng-controller='settingsCtrl'>
     <div class='card-curious-blue'>
       <div class='item item-toggle item-text-wrap'>
         Subtract Sales Tax
         <label class='toggle toggle-niagara'>
-          <input type='checkbox'>
+          <input ng-model='taxToggle' type='checkbox'>
           <div class='track'>
             <div class='handle'></div>
           </div>
         </label>
       </div>
+      <div class='item' ng-show='taxToggle'>
+        Test text
+      </div>
     </div>
+    <div showCalc=''>Show Calc</div>
   </ion-content>
 </ion-view>
