inject taxPercent factory into calc ctrl; ng-change for firing update of taxPercent

--- a/haml/templates/settings.haml
+++ b/haml/templates/settings.haml
@@ -8,7 +8,7 @@
           .track
             .handle
       .item{ "ng-show" => "taxPer.subTax" }
-        {{taxPer.ints}}.{{taxPer.fracts}}%
+        {{taxPerConverted}}%
         
     
 
