--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -11,7 +11,7 @@
         </label>
       </div>
       <div class='item' ng-show='taxPer.subTax'>
-        {{taxPer.ints}}.{{taxPer.fracts}}%
+        {{taxPerConverted}}%
       </div>
     </div>
   </ion-content>
