--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -1,10 +1,10 @@
 <ion-view title='TipAdvisorSettings'>
-  <ion-content id='calc-showable' ng-controller='settingsCtrl'>
+  <ion-content id='calc-showable' ng-controller='settingsCtrl' scroll='false'>
     <div class='card-curious-blue'>
       <div class='item item-toggle item-text-wrap'>
         Subtract Sales Tax
         <label class='toggle toggle-niagara'>
-          <input ng-model='taxPer.subTax' showcalc='' type='checkbox'>
+          <input ng-model='taxPer.subTax' type='checkbox'>
           <div class='track'>
             <div class='handle'></div>
           </div>
@@ -14,5 +14,6 @@
         {{taxPerConverted}}%
       </div>
     </div>
+    <div calc='' ng-show='taxPer.subTax'></div>
   </ion-content>
 </ion-view>
