--- a/haml/templates/settings.haml
+++ b/haml/templates/settings.haml
@@ -1,5 +1,5 @@
 %ion-view{ title: "TipAdvisorSettings" }
-  %ion-content#calc-showable{ "ng-controller" => "settingsCtrl", "scroll" => "false" }
+  %ion-content{ "ng-controller" => "settingsCtrl", "scroll" => "false" }
     .card-curious-blue
       .item.item-toggle.item-text-wrap
         Subtract Sales Tax
@@ -9,7 +9,7 @@
             .handle
       .item{ "ng-show" => "taxPer.subTax" }
         {{taxPerConverted}}%
-    %div{ "calc" => "", "ng-show" => "taxPer.subTax" }
+    %div#calc-showable{ "calc" => "", "ng-show" => "taxPer.subTax" }
         
     
 
