--- a/www/templates/tipCalc.html
+++ b/www/templates/tipCalc.html
@@ -10,7 +10,7 @@
       <div class='tip-container'>
         <div class='header'>Tip</div>
         <div class='cur-tip'>
-          ({{ tip + "%" }}) {{ tipInCur | currency }}
+          {{ tipInCur | currency }} ({{ tip + "%" }})
         </div>
       </div>
       <div class='tip-slider-container'>
