--- a/haml/index.haml
+++ b/haml/index.haml
@@ -16,7 +16,7 @@
     / <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     / <link href='http://fonts.googleapis.com/css?family=Kalam:400,700' rel='stylesheet' type='text/css'>
   %body.platform-ios{ "ng-app" => "tipAdvisor" }
-    %ion-header-bar.header-bar.bar-stable
+    %ion-header-bar.header-bar.bar-light
       %button.button.button-icon.icon.ion-ios7-world-outline{ "ui-sref" => "guide" }
       %h1.title{ "ui-sref" => "calc" } TipAdvisor
       %button.button.button-icon.icon.ion-ios7-gear-outline{ "ui-sref" => "settings"}
