--- a/haml/templates/settings.haml
+++ b/haml/templates/settings.haml
@@ -1,6 +1,7 @@
 %ion-view{ title: "TipAdvisorSettings" }
-  %ion-content{ "ng-controller" => "settingsCtrl", "scroll" => "false" }
-    .card-curious-blue
+  %ion-content.settings-page{ "ng-controller" => "settingsCtrl", "scroll" => "false" }
+    %button.button-right.button.button-icon.icon.ion-calculator{ "ui-sref" => "calc"}
+    .settings-options
       .item.item-toggle.item-text-wrap
         Subtract Sales Tax
         %label.toggle.toggle-niagara
@@ -8,7 +9,7 @@
           .track
             .handle
       .item{ "ng-show" => "taxPer.subTax" }
-        {{taxPerConverted}}%
+        Of {{taxPerConverted}}%
     %div#calc-showable{ "calc" => "", "ng-show" => "taxPer.subTax" }
         
     
