--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -21,7 +21,7 @@ html {
 body {
   background: darken($curious-blue, 10%);
   color: #1F1F21;
-  font-family: 'Lato', sans-serif;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
   -webkit-tap-highlight-color:rgba(0,0,0,0);
 }
 .main-container {
@@ -30,16 +30,19 @@ body {
   max-width: $max-width;
   margin:0 auto;
 }
+.button-right {
+  float: right;
+}
 
 .bill-container{
-  padding: 10px;
+  padding: 10px 10px 20px 10px;
   .header{
     color: #FF3A2D;
-    font-size: 1.4em;
-    padding-bottom: 5px;
+    font-size: 1.6em;
+    padding-bottom: 10px;
   }
   .cur-bill{
-    font-size: 1.8em;
+    font-size: 2em;
   }
 }
 
@@ -47,15 +50,16 @@ body {
   padding: 10px;
   .header{
     color: #FF3A2D;
-    font-size: 1.4em;
-    padding-bottom: 5px;
+    font-size: 1.6em;
+    padding-bottom: 10px;
   }
   .cur-tip{
-    font-size: 1.8em;
+    font-size: 2em;
   }
 }
 
 .tip-slider-container {
+  padding-bottom: 10px;
   .tip-slider {
     &::-webkit-slider-thumb {
       -webkit-appearance: none;
@@ -67,13 +71,14 @@ body {
       width: 30px;
     }
     &::-webkit-slider-thumb:active {
-      -webkit-transform: scale(1.6);
-      transform: scale(1.6);
+      -webkit-transform: scale(1.2);
+      transform: scale(1.2);
     }
     -webkit-appearance: none;
+    border-radius: 0;
     background: black;
     display: inline-block;
-    height: 4px;
+    height: 2px;
     -webkit-transform: translate3d(0px,0px,0px);
     width: 100%;
     // -ms-transform: rotate(270deg); /* IE 9 */
@@ -87,11 +92,11 @@ body {
   padding: 10px;
   .header{
     color: #FF3A2D;
-    font-size: 1.4em;
-    padding-bottom: 5px;
+    font-size: 1.6em;
+    padding-bottom: 10px;
   }
   .cur-total{
-    font-size: 1.8em;
+    font-size: 2em;
   }
 }
 .from-top {
@@ -223,6 +228,36 @@ body {
 .card-full {
   box-shadow: none;
   margin: 0px;
+}
+
+.settings-page {
+  background: black;
+  .button-icon.icon {
+    color: white;
+  }
+  #calc-showable {
+    .num-btns-container {
+      .row-btns {
+        .num-btn {
+          background: black;
+          border-color: black;
+          color: white;
+        }
+      }
+    }
+  }
+}
+.settings-options {
+  margin-top: 50px;
+  .item {
+    background: black;
+    border: none;
+    color: white;
+    font-size: 1.6em;
+  }
+}
+.button-icon.icon {
+  min-width: 40px;
 }
 .card-curious-blue {
   .item {
