padding around tip slider

--- a/haml/templates/tipCalc.haml
+++ b/haml/templates/tipCalc.haml
@@ -16,4 +16,4 @@
         .header Total
         .cur-total
           {{ billWithTip | currency }}
-      %div.hidden-calc{ "calc" => "" }
+      %div{ "calc" => "" }
