--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -59,6 +59,7 @@ body {
 }
 
 .tip-slider-container {
+  padding-top: 10px;
   padding-bottom: 10px;
   .tip-slider {
     &::-webkit-slider-thumb {
